# coursework2

./: README.md  main.py  pyproject.toml  requirements.txt
data/: vacancies.json
src/api/: hh_api.py  vacancy_api.py
src/models/: vacancy.py
src/storage/: json_saver.py
tests/: test_api.py  test_json_saver.py  test_vacancy.py
