[project]
name = "coursework2"
version = "0.1.0"
description = ""
authors = [
    {name = "Tamtun",email = "inteslux@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
black = "^25.1.0"
flake8 = "^7.2.0"
coverage = "^7.8.2"
pytest-cov = "^6.1.1"

